[gd_scene load_steps=2 format=3 uid="uid://cobn4undmh1ci"]

[ext_resource type="Script" path="res://scripts/upgrade.gd" id="1_mrkfo"]

[node name="Upgrade" type="Node2D"]
script = ExtResource("1_mrkfo")

[node name="Button" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0
text = "ButtonText"

[node name="Label" type="Label" parent="."]
visible = false
offset_left = 102.0
offset_right = 256.0
offset_bottom = 23.0
text = "LabelText"

[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
